--- a/Web/package.json
+++ b/Web/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/detain/phptty#readme",
   "dependencies": {
-    "xterm": ">=4.9.0"
+    "xterm": "^4.9.0",
+    "xterm-addon-fit": "^0.4.0",
+    "xterm-addon-web-links": "^0.4.0"
   }
 }
